2003-02-27  Martin Willemoes Hansen <mwh@sysrq.dk>
	* en/Gtk/TreeModel.xml: Fixed GetValue method signature

2003-02-25  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/AspectFrame.xml: full doc, based on C docs.
	* en/Gtk/FileSelection.xml: first draft
	* en/Gtk/ColorSelection.xml: first draft, incorrect API left undocumented and reported as bug #38672.
	* en/Gtk/ColorSelectionDialog.xml: full doc.
	* en/Gtk/CheckMenuItem.xml: full doc, based on C docs.
	* en/Gtk/UpdateType.xml: simple docs for a simple enum.

2003-02-25  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/WrapMode.xml: From Hector.

	* en/Gtk/ButtonsType.xml:
	* en/Gtk/MessageType.xml: Can't sleep, wrote (cut-n-pasted) some
	documentation for some enums.

2003-02-25  Lee Mallabone <mono-docs@fonicmonkey.net>

	* en/Gtk/FontSelection.xml:
	* en/Gtk/FontSelectionDialog.xml: docs for Font widgets

2003-02-24  Kevin Breit  <mrproper@ximian.com>

        * en/Gtk/ArrowType.xml: Fixed a tag mismatch error that caused it to break compile.

2003-02-24  Duncan Mak  <duncan@ximian.com>

	* makefile: Make the path generic again, I forgot to revert the
	last patch after Gonzalo checked in a temporary fix to Uri.cs.

2003-02-24  Kevin Breit  <mrproper@ximian.com>

	* en/Gtk/ArrowType.xml: Removed the "To be added" from the remarks sections.

	* en/Gtk/Arrow.xml: Fixed up a few things in the documentation.

2003-02-23  Duncan Mak  <duncan@ximian.com>

	* makefile: the docs target is dangerous, remove it by
	default. Also, remove the -f flag, so even if we do run it, it
	won't overwrite files, by default.

	* en/Gtk/AccelGroup.xml: From Raphael Schmid
	<raphael.schmid@gmx.de>, with edits.

	* en/Gtk/DirectionType.xml: 
	* en/Gtk/SelectionMode.xml: More from Hector.

	* en/*/*.xml: a Big patch. This adds code-generated documentation
	for internal constructors, the GType property and the Finalized method.

2003-02-22  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/MovementStep.xml: 
	* en/Gtk/ResizeMode.xml: