@@ -1,5 +1,5 @@
 <Type Name="GammaCurve" FullName="Gtk.GammaCurve">
-  <TypeSignature Language="C#" Value="public class GammaCurve : Gtk.VBox, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class GammaCurve : Gtk.VBox, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Hector Gmoez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,15 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The <see cref="T:Gtk.GammaCurve"/> widget is a variant of <see cref="T:Gtk.Curve"/> specifically for editing gamma curves, which are used in graphics applications such as the Gimp.</summary>
+    <remarks>
+     <para>
+      The <see cref="T:Gtk.GammaCurve"/> widget shows a curve which the user can edit with the mouse just like a <see cref="T:Gtk.Curve"/> widget. On the right of the curve it also displays 5 buttons, 3 of which change between the 3 curve modes (spline, linear and free), and the other 2 set the curve to a particular gamma value, or reset it to a straight line.
+     </para>
+     <para>
+       NOTE: this widget is considered too specialized/little-used for GTK+, and will in the future be moved to some other package. If your application needs this widget, feel free to use it, as the widget does work and is useful in some applications; it's just not of general interest. However, we are not accepting new features for the widget, and it will eventually move out of the GTK+ distribution.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.VBox</BaseTypeName>
@@ -79,9 +86,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.GammaCurve'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor.</summary>
+        <returns>An instance of <see cref="T:Gtk.GammaCurve"/>.</returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
