@@ -1,5 +1,5 @@
 <Type Name="Invisible" FullName="Gtk.Invisible">
-  <TypeSignature Language="C#" Value="public class Invisible : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class Invisible : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The <see cref="T:Gtk.Invisible"/> widget is used for reliable pointer grabs and selection handling in the code for drag-and-drop.</summary>
+    <remarks>
+     <para>
+      Used internally in GTK+, and is probably not useful for application developers. 
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Widget</BaseTypeName>
@@ -79,9 +83,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.Invisible'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor.</summary>
+        <returns>An instance of <see cref="T:Gtk.Invisible"/>.</returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
