@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>A widget used for items in menus</summary>
+    <remarks><para>The MenuItem and derived widgets are the only valid children for menus. Their function is to correctly handle highlighting, alignment, events and submenus.</para></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Item</BaseTypeName>
@@ -39,10 +39,10 @@
         <Parameter Name="label" Type="System.String" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="label">To be added: an object of type 'string'</param>
-        <returns>To be added: an object of type 'Gtk.MenuItem'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates a new MenuItem with a <see cref="T:Gtk.Label"/>.</summary>
+        <param name="label">The text to appear on this menu item.</param>
+        <returns>A new MenuItem</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="RemoveSubmenu">
@@ -53,8 +53,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Removes the MenuItem's submenu, if it has one.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Deselect">
@@ -65,8 +65,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fires the <see cref="F:Gtk.Item.Deselect"/> event.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Select">
@@ -77,8 +77,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Fires the <see cref="F:Gtk.Item.Select"/> event.</summary>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ToggleSizeAllocate">
