@@ -1,5 +1,5 @@
 <Type Name="Separator" FullName="Gtk.Separator">
-  <TypeSignature Language="C#" Value="public class Separator : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class Separator : Gtk.Widget, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The <see cref="T:Gtk.Separator"/> widget is an abstract class, used only for deriving the subclasses <see cref="T:Gtk.HSeparator"/> and <see cref="T:Gtk.VSeparator"/>.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Widget</BaseTypeName>
@@ -79,9 +79,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.Separator'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor.</summary>
+        <returns>A instance of <see cref="T:Gtk.Separator"/>.</returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
