@@ -1,5 +1,5 @@
 <Type Name="VSeparator" FullName="Gtk.VSeparator">
-  <TypeSignature Language="C#" Value="public class VSeparator : Gtk.Separator, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class VSeparator : Gtk.Separator, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="Hector Gomez M" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,12 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>The <see cref="T:Gtk.VSeparator"/> is a vertical separator, used to group the widgets within a window.</summary>
+    <remarks>
+     <para>
+      The <see cref="T:Gtk.VSeparator"/> is a vertical separator, used to group the widgets within a window. It displays a vertical line with a shadow to make it appear sunken into the interface.
+     </para>
+    </remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Separator</BaseTypeName>
@@ -79,9 +83,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.VSeparator'</returns>
-        <remarks>To be added</remarks>
+        <summary>Constructor.</summary>
+        <returns>A vertical separator.</returns>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="GType">
