@@ -1,3 +1,13 @@
+2003-02-28  Lee Mallabone <mono-docs@fonicmonkey.net>
+	
+	* en/Gtk/Invisible.xml:
+	* en/Gtk/Separator.xml:
+	* en/Gtk/VSeparator.xml:
+	* en/Gtk/GammaCurve: Hector's latest.
+
+	* en/Gtk/Frame.xml: complete docs exluding dubious API calls.
+	* en/Gtk/MenuItem: document a couple of skeleton methods
+
 2003-02-27  Martin Willemoes Hansen <mwh@sysrq.dk>
 	* en/Gtk/TreeModel.xml: Fixed GetValue method signature
 
